separating contents into different semantics

--- a/index.html
+++ b/index.html
@@ -2,6 +2,29 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title> Learning HTML5 Structure and Syntax </title>
+        <title> NBA - National Basketball Association </title>
+
+        <!--[if lt IE 9]>
+            <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
+        <![endif]-->
     </head>
+    <body>
+        <header>
+            <!-- branding and navigation -->
+        </header>
+        <article>
+            <section>
+                <!-- main topics and descriptions -->
+            </section>
+            <section>
+                <!-- comments or reviews -->
+            </section>
+        </article>
+        <aside>
+            <!-- ads or extra info  -->
+        </aside>
+        <footer>
+            <!-- contacts, terms of use, privacy -->
+        </footer>
+    </body>
 </html
