adds headings for different sections of content

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title> NBA - National Basketball Association </title>
+        <title> HTML5 Structure, Syntax, and Semantics </title>
 
         <!--[if lt IE 9]>
             <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
@@ -11,18 +11,33 @@
     <body>
         <header>
             <!-- branding and navigation -->
+            <h1> Heading </h1>
         </header>
-        <article>
+
+        <main> <!-- indicates the true content of the document -->
+            <h2> Heading - Main Content </h2>
+            <article>
+                <h3> Article Section 1 </h3>
+                <h3> Article Section 2 </h3>
+                <section>
+                    <!-- main topics and descriptions -->
+                    <h4> Article Section 1 </h2>
+                </section>
+                <section>
+                    <!-- comments or reviews -->
+                    <h4> Article Section 2 </h2>
+                </section>
+            </article>
             <section>
-                <!-- main topics and descriptions -->
+                <!-- related to main content -->
+                <h3> Related Content </h3>
             </section>
-            <section>
-                <!-- comments or reviews -->
-            </section>
-        </article>
+        </main>
+
         <aside>
-            <!-- ads or extra info  -->
+            <!-- ads or extra unnecessary info  -->
         </aside>
+
         <footer>
             <!-- contacts, terms of use, privacy -->
         </footer>
