adds nav and IE alternative

--- a/index.html
+++ b/index.html
@@ -12,6 +12,16 @@
         <header>
             <!-- branding and navigation -->
             <h1> Heading </h1>
+            <nav>
+                <ul>
+                    <li><a href="#"> Home </a></li>
+                    <li><a href="#"> About </a></li>
+                    <li><a href="#"> Experience </a></li>
+                    <li><a href="#"> Education </a></li>
+                    <li><a href="#"> Skills </a></li>
+                    <li><a href="#"> Contact </a></li>
+                </ul>
+            </nav>
         </header>
 
         <main> <!-- indicates the true content of the document -->
